Update title in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="SQL 기반 SCM/물류 분석 경력 4년 포트폴리오" />
     <meta name="theme-color" content="#0b1220" />
-    <title>서은한 | SQL · SCM/물류 분석 포트폴리오</title>
+    <title>이승아 | SQL · SCM/물류 분석 포트폴리오</title>
 
     <style>
         :root {
