Update name in navigation from 서은한 to 이승아

--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                 <a class="brand" href="#top" aria-label="홈으로">
                     <div class="logo" aria-hidden="true"></div>
                     <div>
-                        <strong>서은한 · SQL / SCM 분석</strong>
+                        <strong>이승아 · SQL / SCM 분석</strong>
                         <span>생명시스템학 전공 · 물류분석 경력 4년</span>
                     </div>
                 </a>
